--- a/frontend/src/translations/en.json
+++ b/frontend/src/translations/en.json
@@ -18,8 +18,6 @@
     "unknown": "Unknown",
     "download": "Download",
     "downloading": "Downloading {0}...",
-    "clear": "Clear",
-    "search": "Search",
     "_BACKEND": "Please leave a space here to seperate the different sections of the translations.",
     "main.errors_and_warnings": "Errors and warnings in the log files:",
     "main.errors": "Errors:",
@@ -162,7 +160,6 @@
     "frontend.mainmenu.visualisation": "Start Visualisation",
     "frontend.mainmenu.open_in_browser": "Open in browser",
     "frontend.mainmenu.basic_mode": "Enter Basic mode",
-    "frontend.mainmenu.open_plugins": "Open Manager",
     "frontend.pluginlist.failed_to_fetch": "Failed to fetch plugins",
     "frontend.pluginlist.name": "Plugin QuickAccess\u2122",
     "frontend.pluginlist.small_text": "(not really)",
@@ -212,18 +209,9 @@
     "frontend.mainmenu.updates": "Check out these updates from our developers!",
     "frontend.mainmenu.stats": "Here are some of your stats!",
     "frontend.mainmenu.plugins": "Manage your plugins here.",
-    "frontend.plugins.name": "Name",
-    "frontend.plugins.authors": "Authors",
-    "frontend.plugins.tags": "Tags",
-    "frontend.plugins.select_tags": "Search Tags",
-    "frontend.plugins.select_authors": "Search Authors",
-    "frontend.plugins.selected_tags": "{0} tag(s) selected",
-    "frontend.plugins.selected_authors": "{0} author(s) selected",
-    "frontend.plugins.end_list": "This is the end of the list",
-    "frontend.plugins.hidden": "{0} plugin(s) hidden",
     "_LIST_OF_PLUGINS": "Following will be a list of all plugins that allow translation of their names.",
     "plugins.adaptivecruisecontrol": "Adaptive Cruise Control",
-    "plugins.adaptivecruisecontrol.description": "Will slow down for vehicles in front (if an object detection model is enabled). Will also slow down for turns (if a plugin exporting this information is enabled).",
+    "plugins.adaptivecruisecontrol.description": "WIP - Cruise Control using vehicle position data and speed limit.",
     "plugins.ar": "AR (Augmented Reality)",
     "plugins.ar.description": "In development... The plugin will draw shapes over your game, to make it seem like they are in the game world.",
     "plugins.cruisecontrol": "Cruise Control",
@@ -277,8 +265,6 @@
     "global.settings.12.description": "The transparency of the window in transparent mode. 1 = fully opaque, 0 = fully transparent.",
     "global.settings.13.name": "Display ID",
     "global.settings.13.description": "The ID of the display to use for vision applications (Object Detection, etc.). This should be set to the monitor that ETS2 is running on. Needs a restart to apply changes!",
-    "global.settings.14.name": "FOV",
-    "global.settings.14.description": "Missed the popup? Change your FOV here.",
     "map.settings.1.title": "Map Settings",
     "map.settings.1.description": "These settings are for the map plugin.",
     "map.settings.2.name": "Calculate Steering",
@@ -317,11 +303,7 @@
     "acc.settings.2.name": "Follow Time",
     "acc.settings.2.description": "How many seconds behind the vehicle in front we should be.",
     "acc.settings.3.name": "Speed Offset",
-    "acc.settings.3.description": "Drive this amount over the speed limit.",
-    "acc.settings.4.name": "Distance",
-    "acc.settings.4.description": "How far the app should keep from the object in front.",
-    "acc.settings.5.name": "Speed Offset type",
-    "acc.settings.5.description": "Do we drive a percentage faster than the speed limit, or do we add a set amount?",
+    "acc.settings.3.description": "Drive this percentage over the speed limit.",
     "_PLUGIN_KEYS": "These are keys that specific plugins need",
     "map.json_not_found": "No JSON files found in the GameData folder, please unpack the GameData.zip file.",
     "map.loading.preparing": "Map preparing to load data...",
