--- a/frontend/src/translations/fi.json
+++ b/frontend/src/translations/fi.json
@@ -18,8 +18,6 @@
     "unknown": "Tuntematon",
     "download": "Lataa",
     "downloading": "Ladataan {0}...",
-    "clear": "Tyhjenn\u00e4",
-    "search": "Etsi",
     "_BACKEND": "Please leave a space here to seperate the different sections of the translations.",
     "main.errors_and_warnings": "Virheet ja varoitukset lokitiedostoissa:",
     "main.errors": "Virheit\u00e4:",
@@ -162,7 +160,6 @@
     "frontend.mainmenu.visualisation": "K\u00e4ynnist\u00e4 visualisaatio",
     "frontend.mainmenu.open_in_browser": "Avaa visualisaatio selaimessa",
     "frontend.mainmenu.basic_mode": "Avaa perustila",
-    "frontend.mainmenu.open_plugins": "Avaa laajennusten hallinta",
     "frontend.pluginlist.failed_to_fetch": "Laajennuksia ei voitu hakea",
     "frontend.pluginlist.name": "Laajennukset",
     "frontend.pluginlist.small_text": " ",
@@ -212,15 +209,6 @@
     "frontend.mainmenu.updates": "T\u00e4ss\u00e4 kehitt\u00e4jien tekemi\u00e4 p\u00e4ivityksi\u00e4!",
     "frontend.mainmenu.stats": "Katso omia tilastojasi t\u00e4st\u00e4!",
     "frontend.mainmenu.plugins": "Hallitse laajennuksia t\u00e4\u00e4ll\u00e4.",
-    "frontend.plugins.name": "Nimi",
-    "frontend.plugins.authors": "Tekij\u00e4t",
-    "frontend.plugins.tags": "Kategoriat",
-    "frontend.plugins.select_tags": "Etsi kategorioilla",
-    "frontend.plugins.select_authors": "Etsi tekij\u00f6ill\u00e4",
-    "frontend.plugins.selected_tags": "{0} kategoria(a) valittu",
-    "frontend.plugins.selected_authors": "{0} tekij\u00e4(\u00e4) valittu",
-    "frontend.plugins.end_list": "Oho, nyt loppu laajennukset, k\u00e4ypp\u00e4s lataamassa lis\u00e4\u00e4.",
-    "frontend.plugins.hidden": "{0} laajennus(ta) piilotettu",
     "_LIST_OF_PLUGINS": "Following will be a list of all plugins that allow translation of their names.",
     "plugins.adaptivecruisecontrol": "Adaptiivinen vakionopeudens\u00e4\u00e4din",
     "plugins.adaptivecruisecontrol.description": "WIP - Vakionopeudens\u00e4\u00e4din joka jarruttaa edell\u00e4 menev\u00e4n auton perusteella.",
@@ -275,10 +263,6 @@
     "global.settings.11.description": "ETS2LA:n ikkunan korkeus.",
     "global.settings.12.name": "L\u00e4pin\u00e4kyvyys tilan arvo",
     "global.settings.12.description": "Kuinka l\u00e4pin\u00e4kyv\u00e4 ikkuna on l\u00e4pin\u00e4kyvyys tilassa. 1 on normaali, 0.7 tarkoittaa 30% l\u00e4pin\u00e4kyvyytt\u00e4.",
-    "global.settings.13.name": "N\u00e4yt\u00f6n indeksi",
-    "global.settings.13.description": "Havaitsimme monta n\u00e4ytt\u00f6\u00e4, valitse mill\u00e4 n\u00e4yt\u00f6ll\u00e4 ETS2/ATS avataan/on. (Windows asetuksista n\u00e4kee n\u00e4yt\u00f6n numeron) Vaatii uudelleenk\u00e4ynnistyksen!",
-    "global.settings.14.name": "FOV",
-    "global.settings.14.description": "J\u00e4ik\u00f6 ilmoitus huomaamatta? Aseta FOV manuaalisesti t\u00e4ss\u00e4.",
     "map.settings.1.title": "Kartan asetukset",
     "map.settings.1.description": "N\u00e4m\u00e4 asetukset vaikuttavat karttaan ja sen karttatietoihin.",
     "map.settings.2.name": "Laske ohjaus",
@@ -317,11 +301,7 @@
     "acc.settings.2.name": "Seuraamis et\u00e4isyys (aikana)",
     "acc.settings.2.description": "Kuinka monta sekunttia per\u00e4ss\u00e4 ETS2LA yritt\u00e4\u00e4 seurata edell\u00e4 menev\u00e4\u00e4 autoa.",
     "acc.settings.3.name": "Nopeuden s\u00e4\u00e4t\u00f6",
-    "acc.settings.3.description": "Aja t\u00e4m\u00e4n verran kovempaa kuin nopeusrajoitus.",
-    "acc.settings.4.name": "Et\u00e4isyys",
-    "acc.settings.4.description": "Kuinka kaukana edell\u00e4 menev\u00e4st\u00e4 autosta ETS2LA yritt\u00e4\u00e4 pysy\u00e4.",
-    "acc.settings.5.name": "S\u00e4\u00e4d\u00f6n tyyppi",
-    "acc.settings.5.description": "'Percentage' tilassa ajetaan tietty\u00e4 prosenttia kovempaa, 'Absolute' tilassa ajetaan annettua arvoa kovempaa.",
+    "acc.settings.3.description": "Aja t\u00e4t\u00e4 prosenttia nopeusrajoitusta nopeammin.",
     "_PLUGIN_KEYS": "These are keys that specific plugins need",
     "map.json_not_found": "JSON tietoja ei l\u00f6ytynyt. Pura .zip tiedosto ja yrit\u00e4 uudelleen.",
     "map.loading.preparing": "Kartta valmistautuu lataamaan tiedot...",
