--- a/translations/zh_TW.json
+++ b/translations/zh_TW.json
@@ -20,8 +20,6 @@
     "unknown": "未知",
     "download": "下載",
     "downloading": "正在下載 {0}...",
-    "clear": "清除",
-    "search": "搜尋",
 
     "_BACKEND": "請在此處保留一個空格以區分不同的翻譯部分。",
 
@@ -56,7 +54,7 @@
     "sounds.sound_not_found_in_soundpack": "嘗試播放音效 '{0}'，但在音效庫 '{1}' 中找不到",
     "logging.delete_log_error": "無法刪除日誌文件。",
     "logging.logger_initialized": "日誌系統已初始化。",
-    "events.vehicle_change.vehicle_change": "偵測到車輛改變。",
+    "events.vehicle_change.vehicle_change": "偵測到車輛變更。",
     "events.vehicle_change.vehicle_change_description": "我們偵測到一輛新車。請在駕駛艙視角中按下 F4，打開「調整座椅」選項，並輸入新的視野 (FOV) 值。",
 
 
@@ -70,12 +68,12 @@
     
     "_FRONTEND": "請在這裡留空以分隔不同的翻譯區段。",
     
-    "frontend.hello": "歡迎，{0}！",
+    "frontend.hello": "您好，{0}！",
     "frontend.disclaimer.title": "免責聲明！",
     "frontend.disclaimer.description.line1": "ETS2LA 對使用此軟體提供的任何功能所導致的不良影響概不負責。請自行承擔使用此軟體的風險。",
     "frontend.disclaimer.description.line2": "TruckersMP 的管理團隊已允許使用 ETS2LA，但若因使用本軟體而受到任何封鎖或警告，您需自行負責。",
     "frontend.disclaimer.dontshowagain": "不要再次顯示",
-    "frontend.disclaimer.dontshowagain.toast": "免責聲明將於下次更新後才會再次顯示。",
+    "frontend.disclaimer.dontshowagain.toast": "您不會在下一次更新之前再看到它。.",
     "frontend.disclaimer.ok": "我瞭解了", 
     "frontend.app.lost_connection": "與伺服器的連線中斷。",
     "frontend.app.local_ip_placeholder": "ETS2LA 的本地 IP 地址",
@@ -213,23 +211,13 @@
     "frontend.mainmenu.visualisation": "啟動視覺化",
     "frontend.mainmenu.open_in_browser": "在瀏覽器中開啟",
     "frontend.mainmenu.basic_mode": "進入車機模式",
-    "frontend.mainmenu.open_plugins": "開啟插件管理器",
-    "frontend.mainmenu.updates": "查看開發人員的最新更新！",
-    "frontend.mainmenu.stats": "以下是您的統計數據！",
-    "frontend.mainmenu.plugins": "在這裡管理您的插件。",
     "frontend.plugins.plugin_running": "插件正在運行",
     "frontend.plugins.no_description": "無說明",
     "frontend.plugins.button_may_take_second_to_update": "載入可能需要幾秒鐘",
     "frontend.plugins.open_interface": "插件設定",   
-    "frontend.plugins.name": "名稱",
-    "frontend.plugins.authors": "開發者",
-    "frontend.plugins.tags": "標籤",
-    "frontend.plugins.select_tags": "搜尋標籤",
-    "frontend.plugins.select_authors": "搜尋開發者",
-    "frontend.plugins.selected_tags": "已選擇 {0} 個標籤",
-    "frontend.plugins.selected_authors": "已選擇 {0} 位開發者",
-    "frontend.plugins.end_list": "已達列表底部",
-    "frontend.plugins.hidden": "已隱藏 {0} 個插件",
+    "frontend.mainmenu.updates": "查看開發人員的最新更新！",
+    "frontend.mainmenu.stats": "以下是您的統計數據！",
+    "frontend.mainmenu.plugins": "在這裡管理您的插件。",
     "frontend.pluginlist.failed_to_fetch": "獲取插件失敗",
     "frontend.pluginlist.name": "插件快速存取™",
     "frontend.pluginlist.small_text": "（實際上並非如此）",
@@ -277,10 +265,10 @@
 
     "_LIST_OF_PLUGINS": "以下將列出所有允許名稱翻譯的插件。",
 
-    "plugins.adaptivecruisecontrol": "主動式巡航控制 (ACC)",
-    "plugins.adaptivecruisecontrol.description": "插件會對前方車輛減速（如果啟用了物體辨識插件）。也會對彎道減速（如果啟用了地圖駕駛插件）。",
+    "plugins.adaptivecruisecontrol": "主動式巡航控制",
+    "plugins.adaptivecruisecontrol.description": "開發中 - 使用車輛位置數據和速度限制的巡航控制。",
     "plugins.ar": "虛擬實境 (AR)",
-    "plugins.ar.description": "插件會在遊戲中繪製形狀，使它們看起來像是在遊戲世界中。",
+    "plugins.ar.description": "開發中... 插件會在遊戲中繪製形狀，使它們看起來像是在遊戲世界中。",
     "plugins.cruisecontrol": "巡航控制",
     "plugins.cruisecontrol.description": "將遊戲內的巡航控制設定為正確的速度。",
     "plugins.datacollection": "數據收集",
@@ -289,8 +277,8 @@
     "plugins.depthprediction.description": "提供物體閃避的深度預測，請注意，由於性能需求較高，此插件可能僅適用於 NVIDIA 顯卡。",
     "plugins.discordrichpresence": "Discord 狀態顯示",
     "plugins.discordrichpresence.description": "適用於 ETS2LA 的 Discord 狀態顯示插件。",
-    "plugins.map": "地圖駕駛",
-    "plugins.map.description": "使用地圖數據來駕駛卡車。",
+    "plugins.map": "地圖",
+    "plugins.map.description": "地圖辨識插件。",
     "plugins.microcontrollercontrol": "微控制器控制",
     "plugins.microcontrollercontrol.description": "允許您使用微控制器控制 ETS2LA 和 ETS2（適用於按鍵盒）。",
     "plugins.navigationdetection": "導航辨識",
@@ -300,7 +288,7 @@
     "plugins.raycastingtest": "Raycast測試",
     "plugins.raycastingtest.description": "Raycast測試插件，將光線投影到您的滑鼠位置。",
     "plugins.sockets": "Socket",
-    "plugins.sockets.description": "主要用於內建的視覺化功能。",
+    "plugins.sockets.description": "使Socket可用，主要用於內建的視覺化功能。",
     "plugins.trafficlightdetection": "紅綠燈辨識",
     "plugins.trafficlightdetection.description": "使用電腦視覺辨識紅綠燈，並可在輸出視窗顯示它們。它與巡航控制插件連接，可在紅燈時停止卡車。",
     "plugins.truckstats": "卡車數據",
@@ -316,8 +304,8 @@
     "global.settings.3.description": "應用程式中音效的音量。",
     "global.settings.4.name": "連接端口",
     "global.settings.4.description": "使用者端運行的端口。",
-    "global.settings.5.name": "進階Traceback",
-    "global.settings.5.description": "當發生錯誤時是否使用進階Traceback。",
+    "global.settings.5.name": "進階追蹤",
+    "global.settings.5.description": "當發生錯誤時是否使用進階追蹤。",
     "global.settings.6.name": "發送崩潰報告",
     "global.settings.6.description": "是否將崩潰報告發送給開發者。",
     "global.settings.7.name": "Debug模式",
@@ -334,8 +322,6 @@
     "global.settings.12.description": "設定透明模式下視窗的透明度。1 表示完全不透明，0 表示完全透明，可以調整數值來控制透明度。",
     "global.settings.13.name": "顯示器 ID",
     "global.settings.13.description": "用於視覺插件（如物體辨識等）的顯示器 ID。應設定為執行 ETS2 的顯示器。需要重新啟動以套用更改！",
-    "global.settings.14.name": "視野（FOV）",
-    "global.settings.14.description": "錯過了彈出視窗？在這裡調整你的視野（FOV）。",
 
     "map.settings.1.title": "地圖設定",
     "map.settings.1.description": "這些是地圖插件的設定。",
@@ -361,9 +347,9 @@
     "object_detection.settings.2.name": "設備",
     "object_detection.settings.2.description": "用來運行物體辨識的設備，如果選擇自動，則將根據您的系統決定。（如果選擇 GPU，而您沒有 GPU 或未安裝 CUDA，它將默認使用 CPU。）",
     "object_detection.settings.3.name": "模式",
-    "object_detection.settings.3.description": "您想使用的物體辨識模式。請注意，品質模式需要強大的電腦才能良好運行。",
+    "object_detection.settings.3.description": "您想使用的物體辨識模式。請注意，進階模式需要強大的電腦才能良好運行。",
     "object_detection.settings.4.name": "YOLO 辨識速度",
-    "object_detection.settings.4.description": "YOLO 模型的更新速率。較高的值將更快地更新辨識。在性能模式下，這是 FPS，在品質模式下，這是辨識之間的幀數。請注意，性能模式下的值高於 2 可能無法按預期運作。",
+    "object_detection.settings.4.description": "YOLO 模型的更新速率。較高的值將更快地更新辨識。在性能模式下，這是 FPS，在進階模式下，這是辨識之間的幀數。請注意，性能模式下的值高於 2 可能無法按預期運作。",
     "object_detection.settings.5.name": "模型",
     "object_detection.settings.5.description": "您想使用的模型。請注意，YoloV7 需要更多的計算資源。",
     "object_detection.settings.6.name": "螢幕擷取尺寸",
@@ -372,13 +358,9 @@
     "acc.settings.1.title": "主動式巡航控制設定",
     "acc.settings.1.description": "此選項將影響應用程式對其他車輛的反應方式。",
     "acc.settings.2.name": "跟車時間",
-    "acc.settings.2.description": "與前車保持的秒數。",
+    "acc.settings.2.description": "應與前車保持的秒數。",
     "acc.settings.3.name": "速度偏移",
-    "acc.settings.3.description": "超過限速的幅度。",
-    "acc.settings.4.name": "距離",
-    "acc.settings.4.description": "與前方物體保持的距離。",
-    "acc.settings.5.name": "速度偏移類型",
-    "acc.settings.5.description": "選擇超過限速的百分比，或者直接加上固定速度。",
+    "acc.settings.3.description": "超過限速的百分比。",
     
     "_PLUGIN_KEYS": "這些是特定插件所需的鍵值",
 
