--- a/translations/fi.json
+++ b/translations/fi.json
@@ -20,6 +20,8 @@
     "unknown": "Tuntematon",
     "download": "Lataa",
     "downloading": "Ladataan {0}...",
+    "clear": "Tyhjennä",
+    "search": "Etsi",
 
     "_BACKEND": "Please leave a space here to seperate the different sections of the translations.",
 
@@ -168,6 +170,7 @@
     "frontend.mainmenu.visualisation": "Käynnistä visualisaatio",
     "frontend.mainmenu.open_in_browser": "Avaa visualisaatio selaimessa",
     "frontend.mainmenu.basic_mode": "Avaa perustila",
+    "frontend.mainmenu.open_plugins": "Avaa laajennusten hallinta",
     "frontend.pluginlist.failed_to_fetch": "Laajennuksia ei voitu hakea",
     "frontend.pluginlist.name": "Laajennukset",
     "frontend.pluginlist.small_text": " ",
@@ -217,6 +220,15 @@
     "frontend.mainmenu.updates": "Tässä kehittäjien tekemiä päivityksiä!",
     "frontend.mainmenu.stats": "Katso omia tilastojasi tästä!",
     "frontend.mainmenu.plugins": "Hallitse laajennuksia täällä.",
+    "frontend.plugins.name": "Nimi",
+    "frontend.plugins.authors": "Tekijät",
+    "frontend.plugins.tags": "Kategoriat",
+    "frontend.plugins.select_tags": "Etsi kategorioilla",
+    "frontend.plugins.select_authors": "Etsi tekijöillä",
+    "frontend.plugins.selected_tags": "{0} kategoria(a) valittu",
+    "frontend.plugins.selected_authors": "{0} tekijä(ä) valittu",
+    "frontend.plugins.end_list": "Oho, nyt loppu laajennukset, käyppäs lataamassa lisää.",
+    "frontend.plugins.hidden": "{0} laajennus(ta) piilotettu",
 
     "_LIST_OF_PLUGINS": "Following will be a list of all plugins that allow translation of their names.",
 
@@ -275,6 +287,11 @@
     "global.settings.11.description": "ETS2LA:n ikkunan korkeus.",
     "global.settings.12.name": "Läpinäkyvyys tilan arvo",
     "global.settings.12.description": "Kuinka läpinäkyvä ikkuna on läpinäkyvyys tilassa. 1 on normaali, 0.7 tarkoittaa 30% läpinäkyvyyttä.",
+    "global.settings.13.name": "Näytön indeksi",
+    "global.settings.13.description": "Havaitsimme monta näyttöä, valitse millä näytöllä ETS2/ATS avataan/on. (Windows asetuksista näkee näytön numeron) Vaatii uudelleenkäynnistyksen!",
+    "global.settings.14.name": "FOV",
+    "global.settings.14.description": "Jäikö ilmoitus huomaamatta? Aseta FOV manuaalisesti tässä.",
+
 
     "map.settings.1.title": "Kartan asetukset",
     "map.settings.1.description": "Nämä asetukset vaikuttavat karttaan ja sen karttatietoihin.",
@@ -316,7 +333,11 @@
     "acc.settings.2.name": "Seuraamis etäisyys (aikana)",
     "acc.settings.2.description": "Kuinka monta sekunttia perässä ETS2LA yrittää seurata edellä menevää autoa.",
     "acc.settings.3.name": "Nopeuden säätö",
-    "acc.settings.3.description": "Aja tätä prosenttia nopeusrajoitusta nopeammin.",
+    "acc.settings.3.description": "Aja tämän verran kovempaa kuin nopeusrajoitus.",
+    "acc.settings.4.name": "Etäisyys",
+    "acc.settings.4.description": "Kuinka kaukana edellä menevästä autosta ETS2LA yrittää pysyä.",
+    "acc.settings.5.name": "Säädön tyyppi",
+    "acc.settings.5.description": "'Percentage' tilassa ajetaan tiettyä prosenttia kovempaa, 'Absolute' tilassa ajetaan annettua arvoa kovempaa.",
 
     "_PLUGIN_KEYS": "These are keys that specific plugins need",
 
