--- a/translations/keys.json
+++ b/translations/keys.json
@@ -12,6 +12,9 @@
     "unknown",
     "download",
     "downloading",
+    "clear",
+    "search",
+
     "main.errors_and_warnings",
     "main.errors",
     "main.warnings",
@@ -153,6 +156,7 @@
     "frontend.mainmenu.visualisation",
     "frontend.mainmenu.open_in_browser",
     "frontend.mainmenu.basic_mode",
+    "frontend.mainmenu.open_plugins",
     "frontend.pluginlist.failed_to_fetch",
     "frontend.pluginlist.name",
     "frontend.pluginlist.small_text",
@@ -203,6 +207,15 @@
     "frontend.mainmenu.updates",
     "frontend.mainmenu.stats",
     "frontend.mainmenu.plugins",
+    "frontend.plugins.name",
+    "frontend.plugins.authors",
+    "frontend.plugins.tags",
+    "frontend.plugins.select_tags",
+    "frontend.plugins.select_authors",
+    "frontend.plugins.selected_tags",
+    "frontend.plugins.selected_authors",
+    "frontend.plugins.end_list",
+    "frontend.plugins.hidden",
 
     "plugins.adaptivecruisecontrol",
     "plugins.adaptivecruisecontrol.description",
@@ -259,6 +272,8 @@
     "global.settings.12.description",
     "global.settings.13.name",
     "global.settings.13.description",
+    "global.settings.14.name",
+    "global.settings.14.description",
     
     "map.settings.1.title",
     "map.settings.1.description",
@@ -301,6 +316,10 @@
     "acc.settings.2.description",
     "acc.settings.3.name",
     "acc.settings.3.description",
+    "acc.settings.4.name",
+    "acc.settings.4.description",
+    "acc.settings.5.name",
+    "acc.settings.5.description",
 
     "map.loading.preparing",
     "map.loading.nodes",
