--- a/translations/zh_CN.json
+++ b/translations/zh_CN.json
@@ -3,9 +3,7 @@
     "name_en": "Simplified Chinese",
     "iso_code": "zh-CN",
     "language_credits": "您正在使用官方中文。翻译：MRUIAW，晚安，Lun，DennisL",
-
-    "_GLOBALS": "请在此处保留一个空格以区分不同的翻译部分。",
-
+    "_GLOBALS": "请在此处保留一个空间以区分不同的翻译部分。",
     "confirm": "确定",
     "cancel": "取消",
     "yes": "是",
@@ -19,10 +17,10 @@
     "setting": "正在设置...",
     "unknown": "未知",
     "download": "下载",
-    "downloading": "下载中 {0}...",
-
+    "downloading": "下载中 {0}...", 
+    "clear": "清除",
+    "search": "搜索",
     "_BACKEND": "请在此处保留一个空格以区分不同的翻译部分。",
-
     "main.errors_and_warnings": "日志中的错误和警告：",
     "main.errors": "错误：",
     "main.warnings": "警告：",
@@ -56,17 +54,13 @@
     "logging.logger_initialized": "日志系统已初始化。",
     "events.vehicle_change.vehicle_change": "检测到车辆改变。",
     "events.vehicle_change.vehicle_change_description": "我们检测到了一辆新车辆。请在座舱视图中按 F4，打开座椅设置，然后输入新的 FOV 值。",
-
     "_RUNNER": "请在此处留空以分隔不同的翻译区段。",
-
     "runner.could_not_import": "无法导入插件",
     "runner.could_not_load_module": "无法加载模块",
     "runner.initialize_error": "执行 Initialize() 时出错",
     "runner.error_calling_function": "调用函数时出错",
     "runner.plugin_crash": "插件已崩溃。",
-    
     "_FRONTEND": "请在此处留空以分隔不同的翻译区段。",
-    
     "frontend.hello": "你好，{0}！",
     "frontend.disclaimer.title": "免责声明！",
     "frontend.disclaimer.description.line1": "ETS2LA 对因使用该软件提供的任何功能而导致的任何不良影响不负任何责任。请自行承担使用该软件的风险。",
@@ -81,7 +75,7 @@
     "frontend.context.forward": "下一步",
     "frontend.context.reload": "重新加载",
     "frontend.context.return_to_normal": "返回普通模式",
-    "frontend.context.return_to_basic": "返回基础模式",
+    "frontend.context.return_to_basic": "返回专注模式",
     "frontend.logged_out": "已登出。",
     "frontend.states.complete": "完成！",
     "frontend.command.typing_prompt": "输入指令或搜索...",
@@ -167,7 +161,8 @@
     "frontend.version_history.only_100": "仅显示最近的 100 次提交",
     "frontend.mainmenu.visualisation": "启动可视化窗口",
     "frontend.mainmenu.open_in_browser": "在浏览器中打开",
-    "frontend.mainmenu.basic_mode": "进入基础模式（推荐）",
+    "frontend.mainmenu.basic_mode": "进入专注模式",
+    "frontend.mainmenu.open_plugins": "打开管理菜单",
     "frontend.pluginlist.failed_to_fetch": "获取插件失败",
     "frontend.pluginlist.name": "插件快速存取™",
     "frontend.pluginlist.small_text": "（实际上并非如此）",
@@ -217,11 +212,18 @@
     "frontend.mainmenu.updates": "查看开发人员的最新更新！",
     "frontend.mainmenu.stats": "以下是您的统计资料！",
     "frontend.mainmenu.plugins": "在这里管理您的插件。",    
-
+    "frontend.plugins.name": "名称",
+    "frontend.plugins.authors": "作者",
+    "frontend.plugins.tags": "标签",
+    "frontend.plugins.select_tags": "搜索标签",
+    "frontend.plugins.select_authors": "搜索作者",
+    "frontend.plugins.selected_tags": "已选择 {0} 个标签",
+    "frontend.plugins.selected_authors": "已选择 {0} 个作者",
+    "frontend.plugins.end_list": "已到达列表底部",
+    "frontend.plugins.hidden": "已隐藏 {0} 个插件",
     "_LIST_OF_PLUGINS": "以下将列出所有允许名称翻译的插件。",
-
     "plugins.adaptivecruisecontrol": "主动巡航控制 (ACC)",
-    "plugins.adaptivecruisecontrol.description": "开发中 - 使用车辆位置数据和速度限制的巡航控制。",
+    "plugins.adaptivecruisecontrol.description": "会在前方有车辆时减速（如果启用了物体检测插件）。在转弯时也会减速（如果启用了导出此信息的插件）。",
     "plugins.ar": "AR (增强现实)",
     "plugins.ar.description": "开发中... 插件会在游戏画面上绘制形状，使它们看起来像是在游戏里一样。",
     "plugins.cruisecontrol": "巡航控制 (CC)",
@@ -233,7 +235,7 @@
     "plugins.discordrichpresence": "Discord 状态显示 (RPC)",
     "plugins.discordrichpresence.description": "适用于 ETS2LA 的 Discord 状态显示 (RPC) 插件。",
     "plugins.map": "地图",
-    "plugins.map.description": "地图检测插件。",
+    "plugins.map.description": "地图驾驶插件。",
     "plugins.microcontrollercontrol": "微控制器控制",
     "plugins.microcontrollercontrol.description": "允许您使用微控制器控制 ETS2LA 和 ETS2（适用于按键盒/中控盒）。",
     "plugins.navigationdetection": "导航检测",
@@ -243,14 +245,12 @@
     "plugins.raycastingtest": "Raycast测试",
     "plugins.raycastingtest.description": "Raycast测试插件，将射线投射到您的鼠标位置。",
     "plugins.sockets": "Sockets",
-    "plugins.sockets.description": "插件可使数据接口可用，主要用于内建的可视化功能。",
+    "plugins.sockets.description": "使数据接口可用，主要用于内建的可视化功能。",
     "plugins.trafficlightdetection": "红绿灯检测",
     "plugins.trafficlightdetection.description": "使用计算机视觉检测红绿灯，并可在输出窗口显示它们。它与巡航控制插件连接，可在红灯时停止卡车。",
     "plugins.truckstats": "卡车数据",
     "plugins.truckstats.description": "此插件显示关于卡车、路线和游戏的一些统计数据。",
-
     "_PLUGIN_SETTINGS": "请在此处保留一个空格以区分不同的翻译部分。",
-
     "global.settings.1.title": "全局设置",
     "global.settings.1.description": "这些主要是影响整个应用程序的设置。",
     "global.settings.2.name": "音效库",
@@ -259,12 +259,10 @@
     "global.settings.3.description": "应用程序中音效的音量。",
     "global.settings.4.name": "连接端口",
     "global.settings.4.description": "用户端运行的端口。",
-    "global.settings.5.name": "高级追踪",
-    "global.settings.5.description": "当发生错误时是否使用高级追踪。",
+    "global.settings.5.name": "高级Traceback",
+    "global.settings.5.description": "当报错时是否使用高级Traceback。",
     "global.settings.6.name": "发送崩溃报告",
     "global.settings.6.description": "是否将崩溃报告发送给开发者。",
-    "global.settings.13.name": "显示ID",
-    "global.settings.13.description": "用于视觉插件（物体检测等）的 ID 显示器。应将其设置为运行 ETS2 的显示器。需要重新启动才能应用更改！",
     "global.settings.7.name": "调试模式",
     "global.settings.7.description": "是否启用调试模式。",
     "global.settings.8.name": "语言",
@@ -277,7 +275,10 @@
     "global.settings.11.description": "窗口的高度。",
     "global.settings.12.name": "半透明模式 Alpha值 (透明度)",
     "global.settings.12.description": "半透明模式下窗口的透明度。1 = 完全不透明，0 = 完全透明。",
-
+    "global.settings.13.name": "显示器ID",
+    "global.settings.13.description": "用于视觉性功能（物体识别等）的显示器ID。你需要将其设置为正在运行ETS2的显示器。需要完全重启才能应用更改！",
+    "global.settings.14.name": "FOV",
+    "global.settings.14.description": "错过了FOV修改弹窗？在此更改您的 FOV。",
     "map.settings.1.title": "地图设置",
     "map.settings.1.description": "这些是地图插件的设置。",
     "map.settings.2.name": "计算转向",
@@ -299,31 +300,31 @@
     "map.settings.11.description":"平滑转向的时间（以秒为单位）。值为0时，转向会非常灵敏；值大于0.5时，可能会导致左右摇摆。",
     "map.settings.12.name": "在ETS2LA上导航",
     "map.settings.12.description": "将计算出到达目的地所需的路径。免责声明：此路线不保证是最快的！",
-
     "object_detection.settings.1.title": "物体检测设置",
     "object_detection.settings.1.description": "这些设置将影响物体检测的质量和性能。",
     "object_detection.settings.2.name": "设备",
     "object_detection.settings.2.description": "用来运行物体检测的设备，如果选择自动，则将根据您的系统决定。（如果选择 GPU，而您没有 GPU 或未安装 CUDA，它将默认使用 CPU。）",
     "object_detection.settings.3.name": "模式",
-    "object_detection.settings.3.description": "您想使用的物体检测模式。请注意，进阶模式需要强大的电脑才能良好运行。",
+    "object_detection.settings.3.description": "您想使用的物体检测模式。请注意，质量模式需要强大的电脑才能良好运行。",
     "object_detection.settings.4.name": "YOLO 检测速度",
-    "object_detection.settings.4.description": "YOLO 模型的更新速率。较高的值将更快地更新检测。在性能模式下，这是 FPS，在进阶模式下，这是检测之间的帧数。请注意，性能模式下的值高于 2 可能无法按预期运作。",
+    "object_detection.settings.4.description": "YOLO 模型的更新速率。较高的值将更快地更新检测。在性能模式下，这是 FPS，在质量模式下，这是检测之间的帧数。请注意，性能模式下的值高于 2 可能无法按预期运作。",
     "object_detection.settings.5.name": "模型",
     "object_detection.settings.5.description": "您想使用的模型。请注意，YoloV7 需要更多的计算资源。",
     "object_detection.settings.6.name": "屏幕捕捉尺寸",
     "object_detection.settings.6.description": "用于物体检测的屏幕部分。位置 0 是 X，位置 1 是 Y，位置 2 是宽度，位置 3 是高度。此设置将在您首次启动插件后自动设置。",
-    
     "acc.settings.1.title": "ACC - 自适应巡航控制 设置",
     "acc.settings.1.description": "此选项将影响应用程序对其他车辆的反应方式。",
     "acc.settings.2.name": "跟车时间",
-    "acc.settings.2.description": "与前方车辆之间的距离应保持的秒数。",
+    "acc.settings.2.description": "与前方车辆之间的距离应保持的秒数。(到达前方车辆当前所处位置所需要的秒数)",
     "acc.settings.3.name": "速度偏移",
-    "acc.settings.3.description": "以超过限速的指定百分比驾驶。",
-    
+    "acc.settings.3.description": "以超过限速多少去行驶。",
+    "acc.settings.4.name": "距离保持",
+    "acc.settings.4.description": "与前方的物体保持多远的距离。",
+    "acc.settings.5.name": "速度偏移类型",
+    "acc.settings.5.description": "行驶的速度是否要比限速快一定百分比，还是要快一定量？",
     "_PLUGIN_KEYS": "这些是特定插件所需的键值",
-
     "map.json_not_found": "在 GameData 文件夹中找不到 json 文件，请解压缩 GameData.zip 文件。",
-    "map.loading.preparing": "地图准备加载数据中...",
+    "map.loading.preparing": "地图正在准备加载数据...",
     "map.loading.nodes": "地图加载数据点...",
     "map.loading.roads": "地图加载道路中...",
     "map.loading.ferries": "地图加载轮渡中...",
@@ -334,7 +335,6 @@
     "map.visualisation.prefabs.prefabs": "预设对象：{0}，区块：{1}",
     "map.visualisation.prefabs.curves": "弯道：{0}",
     "map.extracting_data": "正在获取 GameData.zip 数据，请稍候...",
-
     "object_detection.loading_model": "正在加载物体检测模型...",
     "object_detection.not_found.1": "以下所需模型尚未下载。",
     "object_detection.not_found.2": "点击下面的按钮从以下位置下载模型",
